<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Trust Net</string>
    <string name="action_settings">Settings</string>
    <string name="btn_me">About me</string>
    <string name="title_about_me">Your identification data</string>
    <string name="label_last_name">Last name</string>
    <string name="label_first_name">First name</string>
    <string name="label_middle_name">Middle name</string>
    <string name="txt_about_me_info">*ATTENTION!!! Your require enter only real data from your real documents. This is required only for marked fields.</string>
    <string name="label_id_doc_number">Tax id number</string>
    <string name="btn_save">Save</string>
    <string name="label_birth_day">Birth day (dd.mm.yyyy)</string>
    <string name="txt_confirm_info">ATTENTION!!! You need cleanly check all marked data by real documents before conform verification!</string>
    <string name="label_verification_level">Verification level (from -10 to 10)</string>
    <string name="label_trust_level">Trust level (from -10 to 10)</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_cancel">Cancel</string>
    <string name="label_id_social_number">Social number</string>
    <string name="label_user_key_id">Public key id</string>
    <string name="btn_servers">Servers...</string>
    <string name="btn_attestations">Attestations...</string>
    <string name="btn_trusts">Trust levels...</string>
    <string name="btn_tags_attestations">Addition attestations...</string>
    <string name="btn_change">Change...</string>
    <string name="btn_messages">Messages...</string>
    <string name="btn_back">Back</string>
    <string name="title_servers_list">Servers list</string>
    <string name="btn_qr_read">Scan code</string>
    <string name="btn_servers_view">View</string>
    <string name="btn_servers_announses">Announces...</string>
    <string name="txt_only_for_admins">Only for servers admins!</string>
    <string name="title_servers_announces_view">Servers announces</string>
    <string name="btn_server_announce_create">Create self announce</string>
    <string name="btn_sign">Sign</string>
    <string name="template_doc_public_key">LIST:Your public key\nYour personal identifier\nCurrent time in ms\nYour public key\nPublic key for cancel it</string>
    <string name="label_personal_id">Personal identifier</string>
    <string name="txt_about_me_generate">Now generated PERSONAL ID from your personal data. It may doing some minutes. Please, wait.</string>
    <string name="btn_sign_doc_app_install">Install...</string>
    <string name="text_sign_doc_app_install">This application required GPLVote Sign Doc application last version installed.</string>
    <string name="title_server_view">Server info</string>
    <string name="btn_server_host">Host:</string>
    <string name="btn_server_source">Source:</string>
    <string name="btn_server_t_create">Detect time:</string>
    <string name="btn_server_t_last_online">Last time online:</string>
    <string name="label_user_cancel_key_id">Cancel key id for main key</string>
    <string name="btn_QR_code_view">Verify QR...</string>
    <string name="text_progress_check_personal_id">Please, wait. Checking personal id...</string>
    <string name="error_bad_personal_id">ERROR!!!\nPersonal id from code and calculated not equal.</string>
    <string name="template_doc_attestation">LIST:Attestation\nYour personal identifier\nCurrent time in ms\nAttestation personal ID\nAttestation public key id\nAttestation level</string>
    <string name="template_doc_trust">LIST:Trust\nYour personal identifier\nCurrent time in ms\nTrusted personal ID\nTrust level</string>
    <string name="title_attestations">Attestations</string>
    <string name="btn_simple_change">Change</string>
    <string name="btn_recreate">Recreate...</string>
    <string name="txt_send_sign">Prepare and send data to servers...</string>
    <string name="title_att_and_trust">Verification</string>
    <string name="title_attestate">Attestate</string>
    <string name="label_history">History</string>
    <string name="label_time">Time</string>
    <string name="title_trusts">Trusts</string>
    <string name="title_trust">Trust</string>
    <string name="title_trust_change">Trust change</string>
    <string name="btn_QR_code_trust">Trust QR...</string>
    <string name="title_tag_type">Addition attestate type</string>
    <string name="txt_tag_type_code">Identification code</string>
    <string name="txt_tag_type_info">Description</string>
    <string name="txt_tag_type_name">Short name</string>
    <string name="title_tags">Addition attestate types</string>
    <string name="title_tag_attestates">Addition attestates</string>
    <string name="label_tag_addition_data">Addition data</string>
    <string name="template_doc_tag">LIST:Addition attestate\nYour personal identifier\nCurrent time in ms\nAddition attestate ID\nVerifyed personal ID\nAddition data\nVerification level</string>
    <string name="label_tag_level">Level (from -10 to 10)</string>
    <string name="label_tag_type_name">Addition attestate type</string>
    <string name="title_message_create">Create message</string>
    <string name="label_target_public_key_id">To public key</string>
    <string name="label_message_text">Message text</string>
    <string name="btn_send">Send</string>
    <string name="template_doc_message">LIST:Message\nCurrent time in ms\nReceiver personal key id\nText</string>
    <string name="txt_message_gen_pow">Please, wait! Prepare message for send...</string>
    <string name="txt_message_send">Please, wait! Message sended...</string>
    <string name="title_messages">Messages inbox</string>
    <string name="btn_messages_check">Check new...</string>
    <string name="txt_messages_check">Check new messages on servers. Please, wait...</string>
    <string name="txt_progress_get_public_key">Find public key. Please, wait...</string>
    <string name="error_no_public_key_found">Can not found public key. Sorry...</string>
    <string name="error_internet_required">Internet connection required for this operation. Please, turn on and repeat.</string>
    <string name="notify_internet_absent">Internet connection absent. You need do syncronize later for send data to servers.</string>
    <string name="btn_data_sync">Syncronize</string>
</resources>
