<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_dark"
        android:gravity="center_vertical|center_horizontal"
        android:padding="6dp"
        android:text="@string/title_attestations"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="bold" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/listTrusts"
        android:layout_weight="1" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_change"
        android:id="@+id/btnTrustChange" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_back"
            android:id="@+id/btnTrustBack"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/btn_servers_view"
            android:id="@+id/btnTrustView"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>