<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/title_tag_type"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal"
        android:gravity="center_vertical|center_horizontal"
        android:background="@android:color/holo_green_dark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:padding="6dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp"
        android:measureWithLargestChild="false"
        android:layout_weight="1"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_tag_type_code"
            android:id="@+id/textView24"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtTagTypeId"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:padding="4dp"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_tag_type_name"
            android:id="@+id/textView25"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtTagTypeShortName"
            android:textStyle="bold"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:padding="4dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_tag_type_info"
            android:id="@+id/textView9"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Medium Text"
            android:id="@+id/txtTagTypeInfo"
            android:background="@android:color/white"
            android:textColor="@android:color/black"
            android:padding="4dp"
            android:layout_weight="0.66" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnTagTypeBack"
            android:layout_weight="1" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:id="@+id/btnTagTypeSave"
            android:layout_weight="1" />

    </LinearLayout>
</LinearLayout>