<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_dark"
        android:gravity="center_vertical|center_horizontal"
        android:padding="6dp"
        android:text="@string/title_about_me"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:measureWithLargestChild="false">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/txt_about_me_info"
                android:id="@+id/textAboutMeEditInfo"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_marginBottom="8dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/lyAboutMeFields">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_first_name"
                    android:id="@+id/textAboutMeName"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtAboutMeName"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:capitalize="characters"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_birth_day"
                    android:id="@+id/textAbountMeBirthday"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/edtAboutMeBirthday"
                    android:textColor="@android:color/black"
                    android:background="@android:color/white"
                    android:capitalize="characters"
                    android:textStyle="bold"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_id_doc_number"
                    android:id="@+id/textView6"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtAboutMeTaxNumber"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:capitalize="characters"
                    android:textStyle="bold"
                    android:padding="4dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/label_id_social_number"
                    android:id="@+id/textView4"
                    android:textStyle="bold"
                    android:textColor="@android:color/black" />

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edtAboutMeSocialNumber"
                    android:background="@android:color/white"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    android:capitalize="characters"
                    android:padding="4dp" />
            </LinearLayout>

            <ProgressBar
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressSave"
                android:layout_gravity="center_horizontal"
                android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btnAboutMeEditBack"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:id="@+id/btnAboutMeSave"
            android:layout_gravity="center"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>